# Roulette

./: README.md  roulette.tex
calculation/: CMakeLists.txt
calculation/src/: expected_rounds.cpp
